# ShadowForge

./: CMakeLists.txt  README.md  toolchain-mingw64.cmake
asm/: syscall_stub.S  syscall_stub.asm
include/: etw_patcher.h  injector.h  obfuscator.h  pe_parser.h  shadowforge.h  syscalls.h  unhooker.h
src/: etw_patcher.cpp  injector.cpp  main.cpp  obfuscator.cpp  pe_parser.cpp  syscalls.cpp  unhooker.cpp
tools/: encrypt_shellcode.py
